--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -34,6 +34,7 @@ body {
     position: sticky;
     top: 0;
     z-index: 100;
+    height: 60px;
     background-color: grey;
     width: 100%; /* Set the width to 100% */
     left: 0; /* Ensure it starts from the left edge of the screen */
