--- a/client/src/styles/SoundTrackShowcase.css
+++ b/client/src/styles/SoundTrackShowcase.css
@@ -13,7 +13,13 @@
 .cardImage {
     position: relative;
     max-height: 850px;
-    border: solid black 5px;
+    border: solid black 0px;
+}
+
+.stsHeader {
+    text-align: center;
+    margin-top: 25px;
+    padding-bottom: 50px;
 }
 
 
