--- a/client/src/styles/Documentation.css
+++ b/client/src/styles/Documentation.css
@@ -1,8 +1,16 @@
 
 .docContainer {
     display: flex;
-    
 }
+
+ul {
+    list-style-type: none;
+  }
+  
+  .docsIcon {
+    margin-right: 0.5rem; /* Adjust the spacing between the icon and the text */
+    vertical-align: middle;
+  }
 
 .navHolder {
     flex: 25%;
@@ -11,7 +19,8 @@
 
 .navbar {
     padding-top: 0;
-    text-align: center;
+    padding-left: 20%;
+    text-align: left;
     background-color: white;
     position: absolute;
     height: calc(100vh - 120px); /* Subtract the height of the sticky header */
