--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -28,10 +28,14 @@
   
   .footer-links a {
     text-decoration: none;
-    color: #333;
     margin-right: 20px;
     margin-left: -60%;
   }
+
+  .footer a {
+    color: inherit;
+  }
+
   
   .footer-bottom {
     text-align: center;
@@ -44,6 +48,10 @@
   
   .footer-social a {
     text-decoration: none;
-    color: #333;
+  }
+
+
+  [data-theme="dark"] .footer {
+    background-color: rgba(14, 10, 6);
   }
   
