--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -24,11 +24,14 @@
 
 .UminekoName {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typewriter cursor */
+  border-right: .15em solid #ff5722; /* The typewriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0; /* Adjust as needed */
   animation: typing 7s steps(40, end) infinite;
+  background: linear-gradient(to right, #fcb045, #fd1d1d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* The typing effect */
@@ -56,7 +59,6 @@
 }
 
 .gridItem {
-  background-color: #f2f2f2;
   padding: 20px;
   width: 90%;
   text-align: center;
@@ -66,6 +68,42 @@
   color: white;
   background-color: black;
   border-radius: 50%;
+}
+
+
+[data-theme="dark"] .UminekoName {
+  border-right: .15em solid #d59bf6;
+
+  background: linear-gradient(to right, #eeaeca, #94bbe9);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.gridItem {
+  position: relative;
+  overflow: hidden;
+}
+
+.gridItem:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  border: 3px solid transparent;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to right, #fcb045, #fd1d1d);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.gridItem:hover:before {
+  opacity: 1;
+}
+
+[data-theme="dark"] .gridItem:before {
+  border-image-source: linear-gradient(to right, #eeaeca, #94bbe9);
 }
 
 @media (max-width: 1068px) {
@@ -108,3 +146,7 @@
     margin-left: 0px;
   }
 }
+
+
+
+
