--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -6,7 +6,8 @@
     background-color: #f2f2f2;
     padding: 20px;
     margin-top: 50px;
-    height: 60px;
+    height: 75px;
+    font-size: 1.5rem;
   }
   
   .footer-content {
@@ -32,6 +33,11 @@
     margin-left: -60%;
   }
 
+  .footerLogo {
+    height: 40px;
+    width: 40px;
+  }
+
   .footer a {
     color: inherit;
   }
@@ -55,3 +61,50 @@
     background-color: rgba(14, 10, 6);
   }
   
+
+
+  @media (max-width: 768px) {
+
+
+    .footer {
+      font-size: 1rem;
+      height: 50px;
+    }
+    .footerLogo {
+      height: 32px;
+      width: 32px;
+    }
+    
+
+   
+    
+  }
+  
+  @media (max-width: 600px) {
+
+    .footer {
+      font-size: 0.75rem;
+    }
+
+    .footerLogo {
+      height: 24px;
+      width: 24px;
+    }
+    
+  }
+
+  @media (max-width: 350px) {
+
+    .footer {
+      font-size: 0.5rem;
+    }
+
+    .footerLogo {
+      height: 24px;
+      width: 24px;
+    }
+    
+
+    
+    
+  }
