--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -8,6 +8,8 @@
     margin-top: 50px;
     height: 75px;
     font-size: 1.5rem;
+    border-top: solid;
+    border-width: 1px;
   }
   
   .footer-content {
