--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -43,6 +43,8 @@ body {
     left: 0; /* Ensure it starts from the left edge of the screen */
     opacity: 97%;
     height: 75px;
+    border-bottom: solid;
+    border-width: 1px;
   }
 
   .HomeDiv {
@@ -118,13 +120,13 @@ body {
   @media (max-width: 300px) {
 
     .navbar-list li {
-      font-size: 0.25rem;
+      font-size: 0.5rem;
     }
 
 
     .logo {
-      width: 10px;
-      height: 10px;
+      width: 16px;
+      height: 16px;
     }
   }
 
