--- a/client/src/styles/SoundTrackDisplay.css
+++ b/client/src/styles/SoundTrackDisplay.css
@@ -1,36 +1,64 @@
 .carouselContainer {
-    max-width: 1200px;
     min-width: 200px;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .carousel {
-    width: 100%;
+    height: 95%;
+    width: 70vw;
 }
-
+.songInfo {
+    margin-top: -2.5%;
+    padding-bottom: 5%;
+}
 .showcaseHeader {
     text-align: center;
-    padding-bottom: 25px;
+    padding-bottom: 50px;
 }
 
 
 
 iframe {
-    height: 90vh;
-    min-height: 300px;
-    width: 90%;
+    height: 40vw;
+    width: 20vw;
+
+
 }
 
 .graphicContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200%;
 }
 
 .graphic-image {
-    height: 100%;
-    width: 50%;
-    min-height: 300px;
-    
+    height: 50vw;
+    width: 50vw;
+    min-height: 300px; 
+}
+
+@media (max-width: 768px) {
+    .carousel {
+        width: 99vw;
+    }
+    .songInfo {
+        margin-top: -5%;
+        font-size: 0.45rem;
+    }
+}
+
+@media (max-width: 550px) {
+    .graphic-image {
+        width: 90vw;
+    }
+}
+
+@media (min-width: 1440px) {
+    .songInfo {
+        font-size: 1rem;
+        margin-top: -1.5%;
+    }
 }
