--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -28,11 +28,10 @@
 
 .UminekoName {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid #BF953F; /* The typewriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: 0; /* Adjust as needed */
-  animation: typing 7s steps(40, end) infinite;
+  animation: typing 4s steps(40, end) forwards;
   background: linear-gradient(to right,#BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -42,8 +41,7 @@
 /* The typing effect */
 @keyframes typing {
   0% { width: 0; }
-  50% { width: 100%; }
-  100% { width: 0; }
+  100% { width: 100%; border-right-width: 0; }
 }
 
 .featureHeader {
@@ -116,15 +114,22 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #efeff2;
+  background-color: rgb(0,0,0,.05);
   margin-top: 7.5%;
   padding-top: 2%;
   padding-bottom: 2%;
+  border: solid;
+  border-width: 0.25px;
+  border-right-width: 0px;
+  border-left-width: 0px;
+  border-color: rgb(0,0,0,.1);
+
 }
 
 
 [data-theme="dark"] .canvasHolder {
   background-color: #191919;
+  border-color: #444444;
 }
 
 @media (max-width: 1068px) {
