--- a/client/src/styles/Epitaph.css
+++ b/client/src/styles/Epitaph.css
@@ -1,21 +1,23 @@
 .EpitaphContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding-left: 2.5%;
-    font-size: 1vw;
-    padding-top: 5%;
-    font-family: Papyrus;
-  }
-  
-  .EpitaphContainer span {
-    display: block;
-    
-    /* or */
-    /* display: inline-block; */
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-left: 2.5%;
+  font-size: 1vw;
+  padding-top: 5%;
+  font-family: Papyrus;
+}
+
+.EpitaphContainer span {
+  display: block;
+}
+
+.scrambled {
+  color: red; /* Set the desired color for scrambled letters */
+  display: inline-block;
+}
 
   @media (max-width: 1440px) {
     .EpitaphContainer{
@@ -27,5 +29,11 @@
         font-size: 1.9vw;
     }
   }
-  
+
+    @media (max-width: 600px) {
+      .EpitaphContainer{
+          font-size: 2.05vw;
+      }
+  }
+
 
